# shifters

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLETE_FEATURES.md  CONTRIBUTING.md  F1METRICS_PHYSICS.md  F1_METRICS_IMPLEMENTATION.md  FRONTEND_SIMULATOR.md  INTEGRATION_COMPLETE.md  PHYSICS_EVALUATION.md  PHYSICS_FEATURES.md  QUICK_START.md  RACING_FEATURES.md  README.md  create_architecture_diagram.py  main.py  presentation.md  pyproject.toml  run_visualization.py
.github/workflows/: pre-commit.yml
data/circuits/: F1_CIRCUITS.md  README.md  monaco.geojson  silverstone.geojson
examples/: basic_race.py  check_openf1_circuits.py  debug_monaco.py  demo_f1metrics_features.py  demo_racing_features.py  f1_circuit_collection_demo.py  f1_monaco.py  geojson_track_demo.py  monaco_gp_2025.py  multi_track_comparison.py  test_f1_collection.py  test_f1metrics_physics.py  test_openf1_strategies.py  test_simulation_physics.py  track_geometry_demo.py
frontend/: .gitignore  CONTROL_PANEL_INTEGRATION.md  FRONTEND_PHYSICS_UPDATE.md  ML_OPTIMIZER.md  PHYSICS_QUICK_REF.md  SETUP.md  electron.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  test-physics.ts  tsconfig.json  validate-parameters.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConnectionStatus.tsx  ControlDeck.tsx  DataGrid.tsx  ParameterEvolutionChart.tsx  Race3DVisualization.tsx  RaceReport.tsx  RaceVisualization.tsx
frontend/electron/: main.js  preload.js
frontend/lib/: index.ts
frontend/scripts/: create-circuit-json.js  (+1 more)
shifters/: __init__.py  cli.py
(+33 files in other folders)
