[project]
name = "shifters"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "mesa>=3.3.1",
    "mesa-viz-tornado>=0.1.3",
    "networkx>=3.5",
    "pydantic>=2.12.4",
    "solara>=1.54.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
include = ["shifters*"]
exclude = ["data*", "examples*"]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
